changes to new sites text

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -326,6 +326,7 @@ li#get-form a {
   width: 134px;
   margin-left: 24px;
   clear: none;
+  font-size: 13px;
   }
 
 #block-views-iqss_project_sites-block_2 img, .view-iqss-project-sites img {
@@ -336,8 +337,9 @@ li#get-form a {
 
 .views-field-description p {
   font-weight: normal;
-  line-height: 1.3em;
+  line-height: 1.1em;
   margin-bottom: 0;
+  font-size: 11px;
   }
 
 .views-field-title a {
