--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -252,6 +252,7 @@ li#get-form span {
 #footer {
   padding-top: 10px;
   background: transparent;
+  border: none;
   }
 
 p.copy, p.copy a, p.copy a:visited {
