--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -255,10 +255,11 @@ li#get-form span {
   border: none;
   }
 
-p.copy, p.copy a, p.copy a:visited {
+p.copy {
   color: #fff;
   }
 
 p.copy a, p.copy a:visited {
   text-decoration: underline;
+  color: #FF952F;
   }
