added real text to get site button

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -167,19 +167,28 @@ ul#top-front li a:hover {
   text-decoration: underline;
   }
 
-li#get-form {
+ul#top-front li#get-form {
   background:url(images/get-your-site-button.png) no-repeat;
   width: 169px;
   height: 42px;
-  text-indent: -999em;
+  text-align: center;
+  line-height: 38px;
   }
 
-li#get-form a {
+ul#top-front li#get-form a, ul#top-front li#get-form a:visited {
   display: block;
   width: 169px;
   height: 42px;
+  color: #FFF;
+  text-decoration: none;
+  font-weight: bold;
+  text-shadow: #333 0px 1px 1px;
+  text-shadow: rgba(51,51,51, .4) 0px 1px 1px;
   }
 
+ul#top-front li#get-form a:hover {
+  color: #f0ff00;
+  }
 
 /* Content Area */
 
