--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -73,6 +73,9 @@ ul#top-front li a:hover {
   position: relative;
   }
 
+#content-row-1 .content {
+  background-image: url(images/front-slideshow-1.png);
+  }
 
 #content-row-2 {
   background:transparent
