--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -7,9 +7,7 @@
 
 body {
 	background: #FFF;
-	font: .9em/normal arial, sans-serif;
-	margin: 0;
-	min-width: 680px;
+	font: .9em/1.5em arial, helvetica, sans-serif;
 	}
 
 #tinymce {
