padding on domain field

--- a/sites/all/modules/scholar_scholar/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/scholar_scholar/scholarregister/theme/scholarregister.css
@@ -74,8 +74,7 @@ body.page-site-register h2.title {
 
 body.page-site-register #user_register, body.page-site-register #domain-field {
   clear:both;
-  padding-top: 50px;
-  padding-bottom: 1px;
+  padding: 25px 0;
   }
 
 #edit-password-wrapper {
