added name-item and mail-item id declarations

--- a/sites/all/modules/scholar_scholar/scholarregister/theme/scholarregister.css
+++ b/sites/all/modules/scholar_scholar/scholarregister/theme/scholarregister.css
@@ -73,7 +73,7 @@ body.page-site-register h2.title {
   }
 
 body.page-site-register #user_register, body.page-site-register #domain-field {
-  clear:both;
+  clear: both;
   padding: 25px 0;
   }
 
@@ -91,7 +91,27 @@ body.page-site-register #user_register, body.page-site-register #domain-field {
 #scholarregister-signup-form #mail-field {
   float: right;
   }
-
+  
+body.page-site-register #name-item{
+ padding-top: 10px;
+ }
+  
+body.page-site-register #name-item label{
+  float: left;
+  padding-top: 3px;
+  padding-right: 7px;
+  }
+  
+body.page-site-register #mail-item{
+  padding-top: 10px;
+  }
+  
+body.page-site-register #mail-item label{
+  float: left;
+  padding-top: 3px;
+  padding-right: 7px;
+  }
+  
 .form-actions {
   text-align: right;
   }
