front video, other changes

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -351,6 +351,10 @@ body.header-left-right #header-right {
   float:right;
   }
 
+#sidebar-left .block, #sidebar-right .block {
+  margin-bottom: 1em;
+  }
+
 /* end of layouts scheme */
 
 
