--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -201,13 +201,12 @@ ul#top-front li#get-form a:hover {
   }
 
 #content-row-1 .content {
-  width: 409px;
   height: 321px;
-  margin: 19px auto 0 auto;
-  background:url(images/front-slideshow-1.png) no-repeat transparent;
-  padding-left: 491px;
-  padding-top: 78px;
+  margin: 25px auto 0 auto;
+  width: 919px;
   }
+
+
 
 #tutorial-link {
   width: 147px;
@@ -220,17 +219,24 @@ ul#top-front li#get-form a:hover {
   text-indent: -999em;
   }
 
-#content-row-1 h2 {
-  font-size: 36px;
-  margin-bottom: 0;
-  color: #4a4949;
-  line-height: 120%;
+#content-row-1 #video-link {
+  float:left;
+  width: 638px;
   }
 
-#content-row-1 h3 {
-  font-size: 30px;
+#content-row-1 h2 {
+  float:right;
+  font-size: 23px;
+  margin-bottom: 0;
+  color: #4a4949;
+  line-height: 1.4em;
+  width: 250px;
+  margin-top:59px;
+  }
+
+#content-row-1 h2 span {
   color: #ababab;
-  line-height: 120%;
+  display:block;
   }
 
 #content-row-2 {
