--- a/sites/all/themes/scholar_theme_09/scholar-theme-09.css
+++ b/sites/all/themes/scholar_theme_09/scholar-theme-09.css
@@ -69,14 +69,17 @@ h2.title {
 /* LAYOUT ELEMENTS */
 
 #sidebar-left, #sidebar-right {
-  font-size: .8em;
-  line-height: 1.1em;
+  font-size: 10px;
+  line-height: 1.5em;
+  font-variant: small-caps;
   }
 
 #sidebar-left {
-    width: 95px;
-    right: 135px;
-     }
+  padding-top: 30px;
+  width: 95px;
+  right: 135px;
+  text-align: right;
+  }
 
 #sidebar-left ul.menu {
   text-align: right;
@@ -147,7 +150,7 @@ h2.title {
 #navbar {
   }
 
-#block-vsite_menus-0 li {
+#navbar #block-vsite_menus-0 li {
     float:left;
     margin-right: 1.3em;
     }
