coming soon restored to projects

--- a/sites/all/themes/scholar_project/scholar-project.css
+++ b/sites/all/themes/scholar_project/scholar-project.css
@@ -173,6 +173,7 @@ ul#top-front li#get-form {
   height: 42px;
   text-align: center;
   line-height: 38px;
+  position: relative;
   }
 
 ul#top-front li#get-form a, ul#top-front li#get-form a:visited {
