--- a/sites/all/themes/scholar_projects_front/scholar-projects-front.css
+++ b/sites/all/themes/scholar_projects_front/scholar-projects-front.css
@@ -45,6 +45,15 @@ ul#top-front li a:hover {
   text-decoration: underline;
   }
 
+#get-form #coming-soon {
+  width: 128px;
+  height: 63px;
+  text-indent:-999em;
+  position: absolute;
+  left:21px;
+  background: url(images/coming-soon.png);
+  }
+
 /* Content Area */
 
 .front #wrapper {
@@ -66,15 +75,10 @@ ul#top-front li a:hover {
   }
 
 #content-row-1 {
-  /*background: url(images/front-row1-bg.png) no-repeat;*/
   width: 982px;
   height: 418px;
   padding-top: 1px;
   position: relative;
-  }
-
-#content-row-1 .content {
-  background-image: url(images/front-slideshow-1.png);
   }
 
 #content-row-2 {
