--- a/sites/all/themes/custom/rbates/rbates.css
+++ b/sites/all/themes/custom/rbates/rbates.css
@@ -19,6 +19,7 @@ body.cp-toolbar-full {
     background: url(images/menu-strip.png) repeat-x 0 100px transparent;
     }
 
+
 #container {
     width: 676px;
     background: url(images/header.jpg) no-repeat 50% 0 transparent;
@@ -26,6 +27,7 @@ body.cp-toolbar-full {
     padding-left: 193px;
     padding-right: 54px;
     }
+
 
 a, a:visited {
     color:#353535;
@@ -175,29 +177,44 @@ h2.title {
 
 /*FRONT PAGE */
 
-body.page-home {
-  background: #4E320A;
+
+.section-home {
+  background: #4C2F0D;
   }
 
-body.page-home #container, body.page-home #content-wrapper-bottom, body.page-home #header {
-  background: transparent;
+.section-home #content-wrapper {
   padding: 0;
   }
 
-#front #container {
-	width: 800px;
-	}
+.section-home #wrapper, .section-home #header, .section-home #container {
+  background: transparent;
+  }
 
-#front #foot {
+.section-home #header {
+  height: 99px;
+  margin: 0 auto;
+  width: 700px;
+  }
+
+.section-home #navbar {
+  display:none;
+  }
+
+.section-home #container {
+  width:800px;
+  padding: 0;
+  }
+
+.section-home #foot {
 	margin: 0 auto;
 	color: #999;
 	}
 
-#front #foot a {
+.section-home #foot a {
 	color: #999;
 	}
 
-#front #nameaddress {
+.section-home #nameaddress {
 	margin-left: 40px;
 	}
 
@@ -205,45 +222,59 @@ body.page-home #container, body.page-home #content-wrapper-bottom, body.page-hom
 	width: 800px;
 	height: 600px;
 	background: url(images/map.jpg);
-	margin: 0 auto;
+	margin: 0;
+	position: relative;
+	padding-top: 1px;
 	}
 
 #map {
-	width: 800px;
-	height: 600px;
-	background: url(images/map-sprite.png) -800px -600px transparent;
-	position: relative;
+	width: 458px;
+	height: 185px;
+	background: url(images/map-sprite.png) -800px -600px transparent no-repeat;
 	padding: 0;
-	margin-left: -7px;
-	}
-
-#map.map-africa_research {
-	background-position: 0px 0px;
+	margin: 56px 0 0 168px;
 	}
 
 #map.map-publications {
-	background-position: 0px -600px;
+	background-position: 0px 0px;
+	}
+
+#map.map-bio {
+  height: 205px;
+	background-position: 0px -185px;
+	margin-top: 172px;
+	}
+
+#map.map-data {
+  height: 150px;
+	background-position: 0px -392px;
+	margin-top: 213px;
 	}
 
 #map.map-classes {
-	background-position: 0px -1200px;
+	height: 100px;
+	background-position: 0px -546px;
+	margin-top: 355px;
 	}
 
 #map.map-contact {
-	background-position: -1600px -600px;
+  height: 115px;
+	background-position: 0px -646px;
+	margin-top: 447px;
 	}
 
-#map.map-about {
-	background-position: -1600px -1200px;
-	}
-
+/*
 #map.map-links {
 	background-position: -800px -1200px;
 	}
+*/
 
 #map li {
 	position: absolute;
 	list-style:none;
+	background: url(images/front-text.png) no-repeat transparent;
+	margin: 0;
+	padding: 0;
 	}
 
 #map li a {
@@ -251,47 +282,52 @@ body.page-home #container, body.page-home #content-wrapper-bottom, body.page-hom
 	text-indent: -999em;
 	}
 
-#map li.africa_research, #map li.africa_research a {
+#map li.publications, #map li.publications a {
 	width: 388px;
 	height: 123px;
-	left: 182px;
-	top: 63px;
+	left: 200px;
+	top: 103px;
 	}
 
-#map li.publications, #map li.publications a {
+#map li.bio, #map li.bio a {
 	width: 252px;
 	height: 126px;
 	left: 173px;
 	top: 194px;
+	background-position: 36px -83px;
 	}
 
-#map li.classes, #map li.classes a {
+#map li.data, #map li.data a {
 	width: 139px;
 	height: 126px;
 	left: 444px;
 	top: 222px;
+	background-position: -226px -128px;
 	}
 
-#map li.contact, #map li.contact a {
+#map li.classes, #map li.classes a {
 	width: 186px;
 	height: 82px;
 	left: 353px;
 	top: 362px;
+	background-position: -142px -261px;
 	}
 
-#map li.about, #map li.about a {
+#map li.contact, #map li.contact a {
 	width: 149px;
 	height: 94px;
 	left: 360px;
 	top: 454px;
+	background-position: -150px -351px;
 	}
-
+/*
 #map li.links, #map li.links a {
 	width: 54px;
 	height: 85px;
 	left: 565px;
 	top: 398px;
 	}
+*/
 
 #map li a {
 	left: auto !important;
