styling for vsite contact form

--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -97,3 +97,15 @@ select option {
   padding: 0 !important;
   text-indent: -999em;
   }
+
+
+/* VSITE CONTACT FORM */
+
+#vsite-support-contact-mail-owner .form-item {
+  border: none;
+  padding: 0;
+  }
+
+#vsite-support-contact-mail-owner .form-item label {
+  display:inline;
+  }
