term ul had padding

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -84,9 +84,19 @@ ol {
   padding-left: 2em;
   }
 
+
+
 #content .node ul li {
   list-style: disc outside;
   padding:0 0 0 3px;
+  }
+
+#content .node .terms ul {
+  padding-left: 0;
+  }
+
+#content .node .terms ul li {
+  padding-left: 0;
   }
 
 #content .node ul li ul {
