page color was slightly off

--- a/sites/all/themes/custom/rbates/rbates.css
+++ b/sites/all/themes/custom/rbates/rbates.css
@@ -1,5 +1,5 @@
 body {
-    background: url(images/fabric-strip.jpg) repeat-y 50% 0 #4C2F0D;
+    background: url(images/fabric-strip.jpg) repeat-y 50% 0 #482D10;
     color:#282828;
     font:.9em/165% "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
     }
