replaced #top position

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -229,6 +229,11 @@ body.cp-toolbar-mini #top {
   z-index: 10;
   }
 
+/* Remove when .mini class is added to #top, rather than body */
+body.admin-menu #top {
+  top: 22px;
+  }
+
 body.cp-toolbar-mini #top ul.links {
   background: url(images/toolbar-mini-tab.png) no-repeat 0 0;
   height: 22px;
