fixed annoying firebug thing

--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -234,6 +234,14 @@ body.admin-menu #top {
   top: 22px;
   }
 
+
+/* Weird firebug fix */
+html.js body {
+  position: static !important;
+  }
+
+
+
 body.cp-toolbar-mini #top ul.links {
   background: url(images/toolbar-mini-tab.png) no-repeat 0 0;
   height: 22px;
