minor color change to menu items so they appear a little on the white if wrapping

--- a/sites/all/themes/scholar_theme_03/scholar-theme-03.css
+++ b/sites/all/themes/scholar_theme_03/scholar-theme-03.css
@@ -164,7 +164,7 @@ body.navbar-off #header {
     }
 
 #navbar li a, #navbar li a:visited {
-    color: #fff;
+    color: #f5f5d8;
     }
 
 #navbar li a:hover, #navbar li a.active {
