minor change to menu items so they appear a little on the white if wrapping

--- a/sites/all/themes/scholar_theme_02/scholar-theme-02.css
+++ b/sites/all/themes/scholar_theme_02/scholar-theme-02.css
@@ -131,6 +131,7 @@ body.sidebar-left #content-wrapper, body.header-left-main #header-wrapper {
     margin-right: 1.5em;
     text-transform: uppercase;
     font-size: 1.1em;
+    background: #a03a25;
     }
 
 
