--- a/sites/all/themes/scholar_theme_05/scholar-theme-05.css
+++ b/sites/all/themes/scholar_theme_05/scholar-theme-05.css
@@ -186,9 +186,12 @@ body.two-sidebars #header {
     background-image:url(images/header-both-sidebar.jpg);
     }
 
-
 body.header-main-right #header-wrapper, body.header-main #header-wrapper {
   margin-left:184px;
+  }
+
+body.sidebar-right #header-wrapper {
+  margin: 0;
   }
 
 #header h1 {
