--- a/sites/all/themes/scholar_theme_11/scholar-theme-11.css
+++ b/sites/all/themes/scholar_theme_11/scholar-theme-11.css
@@ -173,7 +173,7 @@ body.header-main #header-main, body.header-main-right #header-main {
     }
 
 #header h1 a:hover {
-    color:#f5f337;
+    color:#f8f7bd;
     text-decoration: none;
     }
 
