--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -1,14 +1,9 @@
 @font-face {
-	font-family: 'IMFELLEnglishPRORegular';
-	src: url('fonts/FeENrm28C.eot');
-	src: local('fonts/IM FELL English PRO'), local('fonts/IM_FELL_English_PRO_Roman'), url('fonts/FeENrm28C.woff') format('woff'), url('fonts/FeENrm28C.ttf') format('truetype'), url('fonts/FeENrm28C.svg#IM_FELL_English_PRO_Roman') format('svg');
+	font-family: 'TheanoDidotRegular';
+	src: url('fonts/TheanoDidot-Regular.eot');
+	src: local('fonts/Theano Didot'), local('TheanoDidot-Regular'), url('fonts/TheanoDidot-Regular.woff') format('woff'), url('fonts/TheanoDidot-Regular.ttf') format('truetype'), url('fonts/TheanoDidot-Regular.svg#TheanoDidot-Regular') format('svg');
 }
 
-@font-face {
-	font-family: 'IMFELLEnglishPROItalic';
-	src: url('fonts/FeENit27C.eot');
-	src: local('fonts/IM FELL English PRO'), local('fonts/IM_FELL_English_PRO_Italic'), url('fonts/FeENit27C.woff') format('woff'), url('fonts/fonts/FeENit27C.ttf') format('truetype'), url('fonts/FeENit27C.svg#IM_FELL_English_PRO_Italic') format('svg');
-}
 
 html {
     min-width: 910px;
@@ -42,7 +37,7 @@ a:hover {
 h1, h2, h3, #header {
     color:#484b63;
     font-weight: bold;
-    font-family: 'IMFELLEnglishPRORegular', palatino, 'palatino linotype','times new roman', times, serif;
+    font-family: 'TheanoDidotRegular', palatino, 'palatino linotype','times new roman', times, serif;
     }
 
 h2 {
