--- a/sites/all/themes/scholar_theme_06/scholar-theme-06.css
+++ b/sites/all/themes/scholar_theme_06/scholar-theme-06.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'TheanoDidotRegular';
 	src: url('fonts/TheanoDidot-Regular.eot');
-	src: local('fonts/Theano Didot'), local('TheanoDidot-Regular'), url('fonts/TheanoDidot-Regular.woff') format('woff'), url('fonts/TheanoDidot-Regular.ttf') format('truetype'), url('fonts/TheanoDidot-Regular.svg#TheanoDidot-Regular') format('svg');
+	src: local('fonts/Theano Didot'), local('fonts/TheanoDidot-Regular'), url('fonts/TheanoDidot-Regular.woff') format('woff'), url('fonts/TheanoDidot-Regular.ttf') format('truetype'), url('fonts/TheanoDidot-Regular.svg#TheanoDidot-Regular') format('svg');
 }
 
 
