--- a/sites/all/themes/scholar_base/modal.css
+++ b/sites/all/themes/scholar_base/modal.css
@@ -9,7 +9,7 @@
 
 div.ctools-modal-content {
   color: #000;
-  padding: 25px;
+  padding: 20px 0 25px 25px;
   margin: 0;
   border: none;
   text-align: left;
@@ -126,7 +126,7 @@ div.ctools-modal-content .resizable-textarea {
 
 
 #modalContent {
-  padding: 0 40px 35px 40px;
+  padding: 0 23px 35px 40px;
   background: transparent;
   }
 
@@ -146,12 +146,14 @@ div.ctools-modal-content .resizable-textarea {
   left: auto;
   right: 0;
   background-position: 100% 100%;
+  width: 23px;
+  bottom: -6px;
   }
 
 #ctools-bottom {
   width:auto;
   height: 35px;
-  right: 40px;
+  right: 23px;
   left: 40px;
   top: auto;
   background: url(images/dropdown-window-bot.png) repeat-x 0 100% transparent;
