--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -195,6 +195,23 @@ div.terms {
   }
 
 
+/* Used for inline images */
+
+.img-flL {
+  float: left;
+  margin: 0 1em .9em 0;
+  }
+
+.img-flR
+  float: right;
+  margin: 0 0 .9em 1em;
+  }
+
+.img-center {
+  margin: 1.5em auto;
+  text-align: center;
+  }
+
 /* LAYOUT */
 
 #wrapper { }
