fixed footer on front

--- a/sites/all/themes/custom/kshepsle/kshepsle.css
+++ b/sites/all/themes/custom/kshepsle/kshepsle.css
@@ -13,3 +13,8 @@ body.page-home #header {
   background: #44514F;
   padding-bottom: 0;
   }
+
+body.page-home #footer {
+  background: #44514F;
+  padding-top: 0;
+  }
