changes to image gallery

--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -1,5 +1,26 @@
 /* $Id: views_gallery.css,v 1.5 2009/08/18 14:45:17 karens Exp $ */
 
+li.image_field_gallery {
+  width: 133px;
+  height: 73px;
+  background: url(images/add-photo.png) no-repeat transparent;
+  float: left;
+  list-style: none !important;
+  text-align: center;
+  padding: 60px 0 0 0 !important;
+  margin: 0 8px 4px 0;
+  }
+
+.node-type-gallery ul.links {
+  float: left;
+  }
+
+.node-type-gallery .vsite-admin {
+  }
+
+li.image_field_gallery a {
+  margin-top: 60px;
+  }
 
 .view-scholar-image-gallery p {
   margin-bottom: 0;
