initial theming to book

--- a/sites/all/modules/features/scholar_book/scholar-book.css
+++ b/sites/all/modules/features/scholar_book/scholar-book.css
@@ -1,3 +1,55 @@
-#block-scholar_book-booktoc ul {
-  margin-left: 10px;
-}
+.book-menu {
+  width: 33%;
+  float: right;
+  margin: 0 0 1em 1.5em;
+  border-left: 1px dashed #ccc;
+  padding-left: .7em;
+  font-size: .9em;
+  }
+
+
+.book-menu h3 {
+  margin: .5em 0;
+  }
+
+#content .node .book-menu ul {
+  padding: 0;
+  margin: 0;
+  }
+
+
+#content .node .book-menu ul li {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 1em;
+  font-weight: bold;
+  }
+
+#content .node .book-menu ul li li {
+  margin-bottom: 0;
+  font-weight: normal;
+  }
+
+
+#content .node .book-menu ul li a {
+  display:block;
+  border-bottom: 1px dotted #ccc;
+  padding-top: .3em;
+  padding-bottom: .1em;
+  }
+
+#content .node .book-menu ul ul a{
+  padding:0 0 0 .5em;
+  }
+
+#content .node .book-menu ul ul ul a{
+  padding:0 0 0 1.5em;
+  }
+
+#content .node .book-menu ul ul ul ul a{
+  padding:0 0 0 2em;
+  }
+
+#content .node .book-menu ul ul ul ul ul a{
+  padding:0 0 0 2.5em;
+  }
