--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -1,46 +1,53 @@
 /* $Id: views_gallery.css,v 1.5 2009/08/18 14:45:17 karens Exp $ */
 
+#content .node .view-scholar-image-gallery ul {
+  padding: 0;
+  }
+
+#content .node .view-scholar-image-gallery ul li,
 li.image_field_gallery {
-  width: 133px;
+  list-style: none;
+  padding:0;
+  float:left;
+  clear: none;
+  margin: 0 10px 10px 0;
+  height: 183px;
+  }
+
+.node-type-gallery .view-scholar-image-gallery .views-field-field-gallery-image-fid {
+  height:128px;
+  width: 130px;
+  background: url(images/image-shadow.png) 100% 100% no-repeat;
+  }
+
+ul.links li.image_field_gallery a,
+ul.links li.image_field_gallery a:visited{
+  width: 122px;
   height: 73px;
-  background: url(images/add-photo.png) no-repeat transparent;
-  float: left;
-  list-style: none !important;
+  display:block;
   text-align: center;
-  padding: 60px 0 0 0 !important;
-  margin: 0 8px 4px 0;
+  padding-top: 56px;
+  padding-right: 6px;
+  background: url(images/add-image.png) no-repeat #fff;
+  }
+
+ul.links li.image_field_gallery a:hover {
+  text-decoration: none;
+  background-position: 0 -130px;
   }
 
 .node-type-gallery ul.links {
   float: left;
   }
 
-.node-type-gallery .vsite-admin {
-  }
-
-li.image_field_gallery a {
-  margin-top: 60px;
-  }
-
 .view-scholar-image-gallery p {
   margin-bottom: 0;
   }
 
-ul.links li.image_field_gallery  {
-  float: right;
-  }
-
-ul.links li.image_field_gallery a, ul.links li.image_field_gallery a:visited {
-  padding: 2px 5px 2px 28px;
-  font-weight: bold;
-  background: url(images/camera.png) no-repeat 2px 50% transparent;
-  }
-
-
 div.views-field-field-gallery-image-fid img {
-  border: 1px solid #ccc;
-  padding: 2px;
-  background: #fff;
+  padding: 4px;
+  background-color: #fff;
+  border: 1px solid #adadad;
   }
 
 div.views-field-field-gallery-image-fid img:hover {
