theming for image gallery

--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -14,7 +14,7 @@ li.image_field_gallery {
   height: 183px;
   }
 
-.node-type-gallery .view-scholar-image-gallery .views-field-field-gallery-image-fid {
+.view-display-id-node_content_1 .views-field-field-gallery-image-fid {
   height:128px;
   width: 130px;
   background: url(images/image-shadow.png) 100% 100% no-repeat;
@@ -30,6 +30,7 @@ ul.links li.image_field_gallery a:visited{
   padding-right: 6px;
   background: url(images/add-image.png) no-repeat #fff;
   }
+
 
 ul.links li.image_field_gallery a:hover {
   text-decoration: none;
