--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -84,14 +84,12 @@ ol {
   padding-left: 2em;
   }
 
-
-
 #content .node ul li {
   list-style: disc outside;
   padding:0 0 0 3px;
   }
 
-#content .node .terms ul {
+#content .node .terms ul, #content .node ul.links {
   padding-left: 0;
   }
 
