final theming images

--- a/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
+++ b/sites/all/modules/features/scholar_image_gallery/scholar_image_gallery.css
@@ -59,6 +59,10 @@ div.views-field-field-gallery-image-fid img:hover {
  background: #ffff66;
   }
 
+.view-scholar-image-gallery .view-content, .view-scholar-image-gallery .attachment-after {
+  float: left;
+  }
+
 
 /* Gallery Teaser */
 
