final theming images

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -121,7 +121,10 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   bottom: 0;
   }
 
-#cp-content .innerframe form, .view-display-id-page_1, .views-processed , .view-vsite-support{
+#cp-content .innerframe form,
+.view-display-id-page_1,
+#cp-content .views-processed,
+#cp-content .view-vsite-support{
   margin: 30px;
   }
 
@@ -139,7 +142,7 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   position: absolute;
   }
 
-.views-admin-links {
+#cp-content .views-admin-links {
   float: right;
   }
 
