cp theme now ie8 ok, plus fix to theme 11

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -51,6 +51,10 @@ body#tinymce ol li {
 	overflow: hidden;
 	}
 
+#cp-sidemenu, #cp-content, #sidebar-right {
+  overflow: auto;
+  }
+
 #main-content, #main, #cp-content {
 	background: #fff;
 	float: none;
@@ -106,10 +110,12 @@ body.no-sidebars #cp-content, body.sidebar-right #cp-content {
   }
 
 .frame {
+  /*
   position: relative;
   overflow-y: auto;
   overflow-x: hidden;
   height: 100%;
+  */
   }
 
 .innerframe {
