--- a/sites/all/themes/scholar_theme_11/scholar-theme-11.css
+++ b/sites/all/themes/scholar_theme_11/scholar-theme-11.css
@@ -39,6 +39,10 @@ h2.title {
   font-size: .8em;
   }
 
+#sidebar-right {
+  color: #555;
+  }
+
 #sidebar-right h3.title, #sidebar-left h3.title, #sidebar-left #block-vsite_menus-0 li a {
   color: #50cae9;
   font: 13px/normal "Lucida Grande","Lucida Sans Unicode",Arial,Verdana,sans-serif;
@@ -49,7 +53,7 @@ h2.title {
   }
 
 #sidebar-right li a, #sidebar-left li a {
-  color: #757575;
+  color: #aaa;
   font-weight:normal;
   }
 
@@ -90,10 +94,6 @@ p.copy {
 
 #footer {
    }
-
-#header {
-  overflow:auto;
-  }
 
 body.sidebar-left #content-wrapper {
   background-position: -708px 0;
