--- a/sites/all/themes/scholar_base/forms.css
+++ b/sites/all/themes/scholar_base/forms.css
@@ -11,6 +11,10 @@ div.form-item, ul.links, div.admin-panel .body, .clear-block {
   display:block;
   }
 
+ul.links {
+  clear:both;
+  }
+
 div.fieldset, fieldset, .container-inline-date {
   background: #f8f8f8;
   border: 1px solid #ccc;
