--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -390,7 +390,8 @@ body.header-left-right #header-right {
   }
 
 #sidebar-left .block, #sidebar-right .block {
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
+  clear:both;
   }
 
 /* end of layouts scheme */
