removed custom vertical tabs css

--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -10,6 +10,17 @@ fieldset {
   clear:none;
   }
 
+div.vertical-tabs {
+  margin-right: 7px;
+  margin-left: 191px;
+  }
+
+div.vertical-tabs ul.vertical-tabs-list {
+  left: -195px;
+  width: 195px;
+  }
+
+
 .section-cp fieldset legend, h3#modal-title {
 	font-weight: bold;
 	color:#425e69;
@@ -159,6 +170,7 @@ h3#modal-title {
 	padding: 4px 3px 2px 3px;
 	margin: -3px;
 	border-width: 2px;
+	width: 100%;
 	-moz-border-top-colors: #f9f9f9 #707070;
 	-moz-border-left-colors: #f9f9f9 #ABABAB;
 	-moz-border-right-colors: #f9f9f9 #ABABAB;
