--- a/sites/all/themes/custom/gking/gking.css
+++ b/sites/all/themes/custom/gking/gking.css
@@ -63,6 +63,10 @@ a:hover {
   background: url(images/heading.png) repeat-x 0 0 #fff;
   }
 
+#content-main #content {
+  float:left;
+  }
+
 #header-left {
   }
 
@@ -264,5 +268,5 @@ p.copy {
   }
 
 .page-home #header-wrapper {
-  padding-right: 548px;
+  padding-right: 547px;
   }
