--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -1,7 +1,7 @@
 #scholarlayout-container {
   width: 848px;
   height: 711px;
-  background: url(images/layout-map.png) no-repeat #fff 0 0;
+  /* background: url(images/layout-map.png) no-repeat #fff 0 0; */
   position: relative;
   margin-left: 17px;
   margin-top: 0;
